[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distributionalforecasting"
version = "0.0.1"
dependencies = [
    "numpy",
    "torch",
    "tqdm"
]
requires-python = ">=3.8"
authors = [
  {name = "Eric Dong", email = "fake@email.com"},
  {name = "Patrick Laub", email = "fake@email.com"},
]
maintainers = [
  {name = "Eric Dong", email = "fake@email.com"}
]
description = "Distributional regression modelling using PyTorch"
readme = "README.md"
classifiers=[
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
]

[project.optional-dependencies]
dev = ["black", "isort", "pytest"]